src/parser/statement/snapshots/camello__parser__statement__tests__statements__success__semicolon_valid_block_last_statement.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..34
  SUB_DEF@0..33
    SUB_KW@0..3 "sub"
    WHITESPACE@3..4 " "
    IDENT@4..8 "test"
    WHITESPACE@8..9 " "
    BLOCK_STMT@9..33
      L_BRACE@9..10 "{"
      NEWLINE@10..11 "\n"
      WHITESPACE@11..15 "    "
      STMT@15..21
        FUNCTION_CALL_EXPR@15..20
          IDENT@15..18 "foo"
          L_PAREN@18..19 "("
          R_PAREN@19..20 ")"
        SEMICOLON@20..21 ";"
      NEWLINE@21..22 "\n"
      WHITESPACE@22..26 "    "
      STMT@26..32
        FUNCTION_CALL_EXPR@26..32
          IDENT@26..29 "bar"
          L_PAREN@29..30 "("
          R_PAREN@30..31 ")"
          NEWLINE@31..32 "\n"
      R_BRACE@32..33 "}"
  NEWLINE@33..34 "\n"
