src/parser/statement/snapshots/camello__parser__statement__tests__statements__success__sub_forward_declarations.snap
---
source: src/parser/statement/tests.rs
expression: render_success_tree(&syntax)
---
ROOT@0..69
  SUB_DEF@0..8
    SUB_KW@0..3 "sub"
    WHITESPACE@3..4 " "
    IDENT@4..7 "foo"
    SEMICOLON@7..8 ";"
  NEWLINE@8..9 "\n"
  SUB_DEF@9..20
    SUB_KW@9..12 "sub"
    WHITESPACE@12..13 " "
    IDENT@13..16 "bar"
    SUB_PROTOTYPE@16..19
      L_PAREN@16..17 "("
      SCALAR_SIGIL@17..18 "$"
      R_PAREN@18..19 ")"
    SEMICOLON@19..20 ";"
  NEWLINE@20..21 "\n"
  SUB_DEF@21..37
    SUB_KW@21..24 "sub"
    WHITESPACE@24..25 " "
    IDENT@25..28 "baz"
    WHITESPACE@28..29 " "
    ATTR@29..36
      COLON@29..30 ":"
      IDENT@30..36 "method"
    SEMICOLON@36..37 ";"
  NEWLINE@37..38 "\n"
  SUB_DEF@38..68
    SUB_KW@38..41 "sub"
    WHITESPACE@41..42 " "
    IDENT@42..46 "quux"
    WHITESPACE@46..47 " "
    SUB_PROTOTYPE@47..50
      L_PAREN@47..48 "("
      SCALAR_SIGIL@48..49 "$"
      R_PAREN@49..50 ")"
    WHITESPACE@50..51 " "
    ATTR@51..59
      COLON@51..52 ":"
      IDENT@52..58 "method"
      WHITESPACE@58..59 " "
    ATTR@59..67
      COLON@59..60 ":"
      IDENT@60..64 "Attr"
      ATTR_ARGS@64..67
        L_PAREN@64..65 "("
        RAW_STRING@65..66 "1"
        R_PAREN@66..67 ")"
    SEMICOLON@67..68 ";"
  NEWLINE@68..69 "\n"
