src/parser/statement/snapshots/camello__parser__statement__tests__statements__success__sub_prototype_with_semicolon.snap
---
source: src/parser/statement/tests.rs
expression: render_success_tree(&syntax)
---
ROOT@0..256
  COMMENT@0..80 "# Prototypes with sem ..."
  COMMENT@80..150 "# Semicolons separate ..."
  SUB_DEF@150..165
    SUB_KW@150..153 "sub"
    WHITESPACE@153..154 " "
    IDENT@154..157 "foo"
    SUB_PROTOTYPE@157..161
      L_PAREN@157..158 "("
      SCALAR_SIGIL@158..159 "$"
      SEMICOLON@159..160 ";"
      R_PAREN@160..161 ")"
    WHITESPACE@161..162 " "
    BLOCK_STMT@162..165
      L_BRACE@162..163 "{"
      WHITESPACE@163..164 " "
      R_BRACE@164..165 "}"
  NEWLINE@165..166 "\n"
  SUB_DEF@166..182
    SUB_KW@166..169 "sub"
    WHITESPACE@169..170 " "
    IDENT@170..173 "bar"
    SUB_PROTOTYPE@173..178
      L_PAREN@173..174 "("
      SCALAR_SIGIL@174..175 "$"
      SEMICOLON@175..176 ";"
      SCALAR_SIGIL@176..177 "$"
      R_PAREN@177..178 ")"
    WHITESPACE@178..179 " "
    BLOCK_STMT@179..182
      L_BRACE@179..180 "{"
      WHITESPACE@180..181 " "
      R_BRACE@181..182 "}"
  NEWLINE@182..183 "\n"
  SUB_DEF@183..199
    SUB_KW@183..186 "sub"
    WHITESPACE@186..187 " "
    IDENT@187..190 "baz"
    SUB_PROTOTYPE@190..195
      L_PAREN@190..191 "("
      SCALAR_SIGIL@191..192 "$"
      SEMICOLON@192..193 ";"
      ARRAY_SIGIL@193..194 "@"
      R_PAREN@194..195 ")"
    WHITESPACE@195..196 " "
    BLOCK_STMT@196..199
      L_BRACE@196..197 "{"
      WHITESPACE@197..198 " "
      R_BRACE@198..199 "}"
  NEWLINE@199..200 "\n"
  SUB_DEF@200..217
    SUB_KW@200..203 "sub"
    WHITESPACE@203..204 " "
    IDENT@204..207 "qux"
    SUB_PROTOTYPE@207..213
      L_PAREN@207..208 "("
      SCALAR_SIGIL@208..209 "$"
      SCALAR_SIGIL@209..210 "$"
      SEMICOLON@210..211 ";"
      ARRAY_SIGIL@211..212 "@"
      R_PAREN@212..213 ")"
    WHITESPACE@213..214 " "
    BLOCK_STMT@214..217
      L_BRACE@214..215 "{"
      WHITESPACE@215..216 " "
      R_BRACE@216..217 "}"
  NEWLINE@217..218 "\n"
  SUB_DEF@218..236
    SUB_KW@218..221 "sub"
    WHITESPACE@221..222 " "
    IDENT@222..226 "quux"
    SUB_PROTOTYPE@226..232
      L_PAREN@226..227 "("
      SCALAR_SIGIL@227..228 "$"
      SEMICOLON@228..229 ";"
      SCALAR_SIGIL@229..230 "$"
      SCALAR_SIGIL@230..231 "$"
      R_PAREN@231..232 ")"
    WHITESPACE@232..233 " "
    BLOCK_STMT@233..236
      L_BRACE@233..234 "{"
      WHITESPACE@234..235 " "
      R_BRACE@235..236 "}"
  NEWLINE@236..237 "\n"
  SUB_DEF@237..255
    SUB_KW@237..240 "sub"
    WHITESPACE@240..241 " "
    IDENT@241..246 "corge"
    SUB_PROTOTYPE@246..251
      L_PAREN@246..247 "("
      ARRAY_SIGIL@247..248 "@"
      SEMICOLON@248..249 ";"
      SCALAR_SIGIL@249..250 "$"
      R_PAREN@250..251 ")"
    WHITESPACE@251..252 " "
    BLOCK_STMT@252..255
      L_BRACE@252..253 "{"
      WHITESPACE@253..254 " "
      R_BRACE@254..255 "}"
  NEWLINE@255..256 "\n"
