src/parser/statement/snapshots/camello__parser__statement__tests__statements__success__sub_signatures.snap
---
source: src/parser/statement/tests.rs
expression: render_success_tree(&syntax)
---
ROOT@0..1330
  COMMENT@0..45 "# Basic named paramet ..."
  SUB_DEF@45..111
    SUB_KW@45..48 "sub"
    WHITESPACE@48..49 " "
    IDENT@49..54 "greet"
    WHITESPACE@54..55 " "
    SUB_SIGNATURE@55..83
      L_PAREN@55..56 "("
      SIGNATURE_PARAM@56..61
        SCALAR_SIGIL@56..57 "$"
        IDENT@57..61 "name"
      COMMA@61..62 ","
      WHITESPACE@62..63 " "
      SIGNATURE_PARAM@63..82
        SCALAR_SIGIL@63..64 "$"
        IDENT@64..72 "greeting"
        WHITESPACE@72..73 " "
        SIGNATURE_DEFAULT@73..82
          EQ@73..74 "="
          WHITESPACE@74..75 " "
          STRING@75..82 "\"Hello\""
      R_PAREN@82..83 ")"
    WHITESPACE@83..84 " "
    BLOCK_STMT@84..111
      L_BRACE@84..85 "{"
      NEWLINE@85..86 "\n"
      WHITESPACE@86..90 "    "
      STMT@90..110
        STRING@90..109 "\"$greeting, $name!\""
        NEWLINE@109..110 "\n"
      R_BRACE@110..111 "}"
  NEWLINE@111..112 "\n"
  NEWLINE@112..113 "\n"
  COMMENT@113..150 "# Placeholders and sl ..."
  SUB_DEF@150..226
    SUB_KW@150..153 "sub"
    WHITESPACE@153..154 " "
    IDENT@154..162 "flexible"
    WHITESPACE@162..163 " "
    SUB_SIGNATURE@163..195
      L_PAREN@163..164 "("
      SIGNATURE_PARAM@164..170
        SCALAR_SIGIL@164..165 "$"
        IDENT@165..170 "first"
      COMMA@170..171 ","
      WHITESPACE@171..172 " "
      SIGNATURE_PARAM@172..173
        SCALAR_SIGIL@172..173 "$"
      COMMA@173..174 ","
      WHITESPACE@174..175 " "
      SIGNATURE_PARAM@175..187
        SCALAR_SIGIL@175..176 "$"
        IDENT@176..181 "third"
        WHITESPACE@181..182 " "
        SIGNATURE_DEFAULT@182..187
          DEFINED_OR@182..184 "//"
          EQ@184..185 "="
          WHITESPACE@185..186 " "
          NUMBER@186..187 "3"
      COMMA@187..188 ","
      WHITESPACE@188..189 " "
      SIGNATURE_PARAM@189..194
        ARRAY_SIGIL@189..190 "@"
        IDENT@190..194 "rest"
      R_PAREN@194..195 ")"
    WHITESPACE@195..196 " "
    BLOCK_STMT@196..226
      L_BRACE@196..197 "{"
      NEWLINE@197..198 "\n"
      WHITESPACE@198..202 "    "
      STMT@202..224
        RETURN_KW@202..208 "return"
        WHITESPACE@208..209 " "
        INFIX_EXPR@209..223
          SCALAR_VAR@209..216
            SCALAR_SIGIL@209..210 "$"
            IDENT@210..215 "first"
            WHITESPACE@215..216 " "
          PLUS@216..217 "+"
          WHITESPACE@217..218 " "
          ARRAY_VAR@218..223
            ARRAY_SIGIL@218..219 "@"
            IDENT@219..223 "rest"
        SEMICOLON@223..224 ";"
      NEWLINE@224..225 "\n"
      R_BRACE@225..226 "}"
  NEWLINE@226..227 "\n"
  NEWLINE@227..228 "\n"
  COMMENT@228..259 "# Hash slurpy with || ..."
  SUB_DEF@259..333
    SUB_KW@259..262 "sub"
    WHITESPACE@262..263 " "
    IDENT@263..272 "configure"
    WHITESPACE@272..273 " "
    SUB_SIGNATURE@273..294
      L_PAREN@273..274 "("
      SIGNATURE_PARAM@274..286
        SCALAR_SIGIL@274..275 "$"
        IDENT@275..280 "debug"
        WHITESPACE@280..281 " "
        SIGNATURE_DEFAULT@281..286
          LOGICAL_OR@281..283 "||"
          EQ@283..284 "="
          WHITESPACE@284..285 " "
          NUMBER@285..286 "0"
      COMMA@286..287 ","
      WHITESPACE@287..288 " "
      SIGNATURE_PARAM@288..293
        HASH_SIGIL@288..289 "%"
        IDENT@289..293 "opts"
      R_PAREN@293..294 ")"
    WHITESPACE@294..295 " "
    BLOCK_STMT@295..333
      L_BRACE@295..296 "{"
      NEWLINE@296..297 "\n"
      WHITESPACE@297..301 "    "
      STMT@301..331
        RETURN_KW@301..307 "return"
        WHITESPACE@307..308 " "
        INFIX_EXPR@308..330
          HASH_SUBSCRIPTION_EXPR@308..321
            SCALAR_VAR@308..313
              SCALAR_SIGIL@308..309 "$"
              IDENT@309..313 "opts"
            L_BRACE@313..314 "{"
            IDENT@314..319 "level"
            R_BRACE@319..320 "}"
            WHITESPACE@320..321 " "
          DEFINED_OR@321..323 "//"
          WHITESPACE@323..324 " "
          SCALAR_VAR@324..330
            SCALAR_SIGIL@324..325 "$"
            IDENT@325..330 "debug"
        SEMICOLON@330..331 ";"
      NEWLINE@331..332 "\n"
      R_BRACE@332..333 "}"
  NEWLINE@333..334 "\n"
  NEWLINE@334..335 "\n"
  COMMENT@335..359 "# Explicit placeholders\n"
  SUB_DEF@359..408
    SUB_KW@359..362 "sub"
    WHITESPACE@362..363 " "
    IDENT@363..379 "placeholder_only"
    WHITESPACE@379..380 " "
    SUB_SIGNATURE@380..389
      L_PAREN@380..381 "("
      SIGNATURE_PARAM@381..382
        SCALAR_SIGIL@381..382 "$"
      COMMA@382..383 ","
      WHITESPACE@383..384 " "
      SIGNATURE_PARAM@384..385
        ARRAY_SIGIL@384..385 "@"
      COMMA@385..386 ","
      WHITESPACE@386..387 " "
      SIGNATURE_PARAM@387..388
        HASH_SIGIL@387..388 "%"
      R_PAREN@388..389 ")"
    WHITESPACE@389..390 " "
    BLOCK_STMT@390..408
      L_BRACE@390..391 "{"
      NEWLINE@391..392 "\n"
      WHITESPACE@392..396 "    "
      STMT@396..406
        RETURN_KW@396..402 "return"
        WHITESPACE@402..403 " "
        ARRAY_VAR@403..405
          ARRAY_SIGIL@403..404 "@"
          IDENT@404..405 "_"
        SEMICOLON@405..406 ";"
      NEWLINE@406..407 "\n"
      R_BRACE@407..408 "}"
  NEWLINE@408..409 "\n"
  NEWLINE@409..410 "\n"
  COMMENT@410..437 "# Scalar placeholder  ..."
  SUB_DEF@437..482
    SUB_KW@437..440 "sub"
    WHITESPACE@440..441 " "
    IDENT@441..459 "scalar_placeholder"
    WHITESPACE@459..460 " "
    SUB_SIGNATURE@460..463
      L_PAREN@460..461 "("
      SIGNATURE_PARAM@461..462
        SCALAR_SIGIL@461..462 "$"
      R_PAREN@462..463 ")"
    WHITESPACE@463..464 " "
    BLOCK_STMT@464..482
      L_BRACE@464..465 "{"
      NEWLINE@465..466 "\n"
      WHITESPACE@466..470 "    "
      STMT@470..480
        RETURN_KW@470..476 "return"
        WHITESPACE@476..477 " "
        NUMBER@477..479 "42"
        SEMICOLON@479..480 ";"
      NEWLINE@480..481 "\n"
      R_BRACE@481..482 "}"
  NEWLINE@482..483 "\n"
  NEWLINE@483..484 "\n"
  COMMENT@484..517 "# Placeholder with de ..."
  SUB_DEF@517..583
    SUB_KW@517..520 "sub"
    WHITESPACE@520..521 " "
    IDENT@521..540 "placeholder_default"
    WHITESPACE@540..541 " "
    SUB_SIGNATURE@541..556
      L_PAREN@541..542 "("
      SIGNATURE_PARAM@542..548
        SCALAR_SIGIL@542..543 "$"
        IDENT@543..548 "thing"
      COMMA@548..549 ","
      WHITESPACE@549..550 " "
      SIGNATURE_PARAM@550..555
        SCALAR_SIGIL@550..551 "$"
        WHITESPACE@551..552 " "
        SIGNATURE_DEFAULT@552..555
          EQ@552..553 "="
          WHITESPACE@553..554 " "
          NUMBER@554..555 "1"
      R_PAREN@555..556 ")"
    WHITESPACE@556..557 " "
    BLOCK_STMT@557..583
      L_BRACE@557..558 "{"
      NEWLINE@558..559 "\n"
      WHITESPACE@559..563 "    "
      STMT@563..582
        RETURN_KW@563..569 "return"
        WHITESPACE@569..570 " "
        INFIX_EXPR@570..582
          SCALAR_VAR@570..577
            SCALAR_SIGIL@570..571 "$"
            IDENT@571..576 "thing"
            WHITESPACE@576..577 " "
          PLUS@577..578 "+"
          WHITESPACE@578..579 " "
          SCALAR_VAR@579..581
            SCALAR_SIGIL@579..580 "$"
            IDENT@580..581 ";"
          NEWLINE@581..582 "\n"
      R_BRACE@582..583 "}"
  NEWLINE@583..584 "\n"
  NEWLINE@584..585 "\n"
  COMMENT@585..631 "# Complex default exp ..."
  SUB_DEF@631..706
    SUB_KW@631..634 "sub"
    WHITESPACE@634..635 " "
    IDENT@635..650 "complex_default"
    WHITESPACE@650..651 " "
    SUB_SIGNATURE@651..683
      L_PAREN@651..652 "("
      SIGNATURE_PARAM@652..682
        SCALAR_SIGIL@652..653 "$"
        IDENT@653..658 "value"
        WHITESPACE@658..659 " "
        SIGNATURE_DEFAULT@659..682
          EQ@659..660 "="
          WHITESPACE@660..661 " "
          INFIX_EXPR@661..682
            SCALAR_VAR@661..670
              SCALAR_SIGIL@661..662 "$"
              IDENT@662..669 "primary"
              WHITESPACE@669..670 " "
            LOGICAL_OR@670..672 "||"
            WHITESPACE@672..673 " "
            SCALAR_VAR@673..682
              SCALAR_SIGIL@673..674 "$"
              IDENT@674..682 "fallback"
      R_PAREN@682..683 ")"
    WHITESPACE@683..684 " "
    BLOCK_STMT@684..706
      L_BRACE@684..685 "{"
      NEWLINE@685..686 "\n"
      WHITESPACE@686..690 "    "
      STMT@690..704
        RETURN_KW@690..696 "return"
        WHITESPACE@696..697 " "
        SCALAR_VAR@697..703
          SCALAR_SIGIL@697..698 "$"
          IDENT@698..703 "value"
        SEMICOLON@703..704 ";"
      NEWLINE@704..705 "\n"
      R_BRACE@705..706 "}"
  NEWLINE@706..707 "\n"
  NEWLINE@707..708 "\n"
  COMMENT@708..747 "# Parenthesized low-p ..."
  SUB_DEF@747..825
    SUB_KW@747..750 "sub"
    WHITESPACE@750..751 " "
    IDENT@751..766 "grouped_default"
    WHITESPACE@766..767 " "
    SUB_SIGNATURE@767..803
      L_PAREN@767..768 "("
      SIGNATURE_PARAM@768..802
        SCALAR_SIGIL@768..769 "$"
        IDENT@769..773 "name"
        WHITESPACE@773..774 " "
        SIGNATURE_DEFAULT@774..802
          EQ@774..775 "="
          WHITESPACE@775..776 " "
          L_PAREN@776..777 "("
          INFIX_EXPR@777..801
            FUNCTION_CALL_EXPR@777..792
              IDENT@777..789 "default_name"
              L_PAREN@789..790 "("
              R_PAREN@790..791 ")"
              WHITESPACE@791..792 " "
            OR_KW@792..794 "or"
            WHITESPACE@794..795 " "
            STRING@795..801 "\"anon\""
          R_PAREN@801..802 ")"
      R_PAREN@802..803 ")"
    WHITESPACE@803..804 " "
    BLOCK_STMT@804..825
      L_BRACE@804..805 "{"
      NEWLINE@805..806 "\n"
      WHITESPACE@806..810 "    "
      STMT@810..823
        RETURN_KW@810..816 "return"
        WHITESPACE@816..817 " "
        SCALAR_VAR@817..822
          SCALAR_SIGIL@817..818 "$"
          IDENT@818..822 "name"
        SEMICOLON@822..823 ";"
      NEWLINE@823..824 "\n"
      R_BRACE@824..825 "}"
  NEWLINE@825..826 "\n"
  NEWLINE@826..827 "\n"
  COMMENT@827..874 "# Hash placeholder fo ..."
  SUB_DEF@874..923
    SUB_KW@874..877 "sub"
    WHITESPACE@877..878 " "
    IDENT@878..896 "mixed_placeholders"
    WHITESPACE@896..897 " "
    SUB_SIGNATURE@897..904
      L_PAREN@897..898 "("
      SIGNATURE_PARAM@898..899
        HASH_SIGIL@898..899 "%"
      COMMA@899..900 ","
      WHITESPACE@900..901 " "
      SIGNATURE_PARAM@901..903
        SCALAR_SIGIL@901..902 "$"
        IDENT@902..903 "x"
      R_PAREN@903..904 ")"
    WHITESPACE@904..905 " "
    BLOCK_STMT@905..923
      L_BRACE@905..906 "{"
      NEWLINE@906..907 "\n"
      WHITESPACE@907..911 "    "
      STMT@911..921
        RETURN_KW@911..917 "return"
        WHITESPACE@917..918 " "
        SCALAR_VAR@918..920
          SCALAR_SIGIL@918..919 "$"
          IDENT@919..920 "x"
        SEMICOLON@920..921 ";"
      NEWLINE@921..922 "\n"
      R_BRACE@922..923 "}"
  NEWLINE@923..924 "\n"
  NEWLINE@924..925 "\n"
  COMMENT@925..951 "# Slurpy array at the ..."
  SUB_DEF@951..1019
    SUB_KW@951..954 "sub"
    WHITESPACE@954..955 " "
    IDENT@955..965 "slurpy_end"
    WHITESPACE@965..966 " "
    SUB_SIGNATURE@966..981
      L_PAREN@966..967 "("
      SIGNATURE_PARAM@967..973
        SCALAR_SIGIL@967..968 "$"
        IDENT@968..973 "first"
      COMMA@973..974 ","
      WHITESPACE@974..975 " "
      SIGNATURE_PARAM@975..980
        ARRAY_SIGIL@975..976 "@"
        IDENT@976..980 "rest"
      R_PAREN@980..981 ")"
    WHITESPACE@981..982 " "
    BLOCK_STMT@982..1019
      L_BRACE@982..983 "{"
      NEWLINE@983..984 "\n"
      WHITESPACE@984..988 "    "
      STMT@988..1017
        RETURN_KW@988..994 "return"
        WHITESPACE@994..995 " "
        INFIX_EXPR@995..1016
          SCALAR_VAR@995..1002
            SCALAR_SIGIL@995..996 "$"
            IDENT@996..1001 "first"
            WHITESPACE@1001..1002 " "
          PLUS@1002..1003 "+"
          WHITESPACE@1003..1004 " "
          FUNCTION_CALL_EXPR@1004..1016
            IDENT@1004..1010 "scalar"
            WHITESPACE@1010..1011 " "
            ARRAY_VAR@1011..1016
              ARRAY_SIGIL@1011..1012 "@"
              IDENT@1012..1016 "rest"
        SEMICOLON@1016..1017 ";"
      NEWLINE@1017..1018 "\n"
      R_BRACE@1018..1019 "}"
  NEWLINE@1019..1020 "\n"
  NEWLINE@1020..1021 "\n"
  COMMENT@1021..1063 "# Multiline signature ..."
  SUB_DEF@1063..1189
    SUB_KW@1063..1066 "sub"
    WHITESPACE@1066..1067 " "
    IDENT@1067..1076 "multiline"
    WHITESPACE@1076..1077 " "
    SUB_SIGNATURE@1077..1137
      L_PAREN@1077..1078 "("
      NEWLINE@1078..1079 "\n"
      WHITESPACE@1079..1083 "    "
      SIGNATURE_PARAM@1083..1089
        SCALAR_SIGIL@1083..1084 "$"
        IDENT@1084..1089 "alpha"
      COMMA@1089..1090 ","
      NEWLINE@1090..1091 "\n"
      WHITESPACE@1091..1095 "    "
      SIGNATURE_PARAM@1095..1122
        SCALAR_SIGIL@1095..1096 "$"
        IDENT@1096..1100 "beta"
        WHITESPACE@1100..1101 " "
        SIGNATURE_DEFAULT@1101..1122
          LOGICAL_OR@1101..1103 "||"
          EQ@1103..1104 "="
          WHITESPACE@1104..1105 " "
          FUNCTION_CALL_EXPR@1105..1122
            IDENT@1105..1120 "compute_default"
            L_PAREN@1120..1121 "("
            R_PAREN@1121..1122 ")"
      COMMA@1122..1123 ","
      NEWLINE@1123..1124 "\n"
      WHITESPACE@1124..1128 "    "
      SIGNATURE_PARAM@1128..1134
        HASH_SIGIL@1128..1129 "%"
        IDENT@1129..1134 "extra"
      COMMA@1134..1135 ","
      NEWLINE@1135..1136 "\n"
      R_PAREN@1136..1137 ")"
    WHITESPACE@1137..1138 " "
    BLOCK_STMT@1138..1189
      L_BRACE@1138..1139 "{"
      NEWLINE@1139..1140 "\n"
      WHITESPACE@1140..1144 "    "
      STMT@1144..1187
        RETURN_KW@1144..1150 "return"
        WHITESPACE@1150..1151 " "
        INFIX_EXPR@1151..1186
          INFIX_EXPR@1151..1166
            SCALAR_VAR@1151..1158
              SCALAR_SIGIL@1151..1152 "$"
              IDENT@1152..1157 "alpha"
              WHITESPACE@1157..1158 " "
            PLUS@1158..1159 "+"
            WHITESPACE@1159..1160 " "
            SCALAR_VAR@1160..1166
              SCALAR_SIGIL@1160..1161 "$"
              IDENT@1161..1165 "beta"
              WHITESPACE@1165..1166 " "
          PLUS@1166..1167 "+"
          WHITESPACE@1167..1168 " "
          FUNCTION_CALL_EXPR@1168..1186
            IDENT@1168..1174 "scalar"
            WHITESPACE@1174..1175 " "
            FUNCTION_CALL_EXPR@1175..1186
              IDENT@1175..1179 "keys"
              WHITESPACE@1179..1180 " "
              HASH_VAR@1180..1186
                HASH_SIGIL@1180..1181 "%"
                IDENT@1181..1186 "extra"
        SEMICOLON@1186..1187 ";"
      NEWLINE@1187..1188 "\n"
      R_BRACE@1188..1189 "}"
  NEWLINE@1189..1190 "\n"
  NEWLINE@1190..1191 "\n"
  COMMENT@1191..1229 "# Anonymous subroutin ..."
  STMT@1229..1329
    VAR_DECL@1229..1328
      MY_KW@1229..1231 "my"
      WHITESPACE@1231..1232 " "
      INFIX_EXPR@1232..1328
        SCALAR_VAR@1232..1238
          SCALAR_SIGIL@1232..1233 "$"
          IDENT@1233..1237 "anon"
          WHITESPACE@1237..1238 " "
        EQ@1238..1239 "="
        WHITESPACE@1239..1240 " "
        ANON_SUB_EXPR@1240..1328
          SUB_KW@1240..1243 "sub"
          WHITESPACE@1243..1244 " "
          SUB_SIGNATURE@1244..1266
            L_PAREN@1244..1245 "("
            SIGNATURE_PARAM@1245..1258
              SCALAR_SIGIL@1245..1246 "$"
              IDENT@1246..1251 "value"
              WHITESPACE@1251..1252 " "
              SIGNATURE_DEFAULT@1252..1258
                LOGICAL_OR@1252..1254 "||"
                EQ@1254..1255 "="
                WHITESPACE@1255..1256 " "
                NUMBER@1256..1258 "10"
            COMMA@1258..1259 ","
            WHITESPACE@1259..1260 " "
            SIGNATURE_PARAM@1260..1265
              HASH_SIGIL@1260..1261 "%"
              IDENT@1261..1265 "opts"
            R_PAREN@1265..1266 ")"
          WHITESPACE@1266..1267 " "
          BLOCK_STMT@1267..1328
            L_BRACE@1267..1268 "{"
            NEWLINE@1268..1269 "\n"
            WHITESPACE@1269..1273 "    "
            STMT@1273..1326
              RETURN_KW@1273..1279 "return"
              WHITESPACE@1279..1280 " "
              TERNARY_EXPR@1280..1325
                HASH_SUBSCRIPTION_EXPR@1280..1293
                  SCALAR_VAR@1280..1285
                    SCALAR_SIGIL@1280..1281 "$"
                    IDENT@1281..1285 "opts"
                  L_BRACE@1285..1286 "{"
                  IDENT@1286..1291 "scale"
                  R_BRACE@1291..1292 "}"
                  WHITESPACE@1292..1293 " "
                QUESTION_MARK@1293..1294 "?"
                WHITESPACE@1294..1295 " "
                INFIX_EXPR@1295..1317
                  SCALAR_VAR@1295..1302
                    SCALAR_SIGIL@1295..1296 "$"
                    IDENT@1296..1301 "value"
                    WHITESPACE@1301..1302 " "
                  STAR@1302..1303 "*"
                  WHITESPACE@1303..1304 " "
                  HASH_SUBSCRIPTION_EXPR@1304..1317
                    SCALAR_VAR@1304..1309
                      SCALAR_SIGIL@1304..1305 "$"
                      IDENT@1305..1309 "opts"
                    L_BRACE@1309..1310 "{"
                    IDENT@1310..1315 "scale"
                    R_BRACE@1315..1316 "}"
                    WHITESPACE@1316..1317 " "
                COLON@1317..1318 ":"
                WHITESPACE@1318..1319 " "
                SCALAR_VAR@1319..1325
                  SCALAR_SIGIL@1319..1320 "$"
                  IDENT@1320..1325 "value"
              SEMICOLON@1325..1326 ";"
            NEWLINE@1326..1327 "\n"
            R_BRACE@1327..1328 "}"
    SEMICOLON@1328..1329 ";"
  NEWLINE@1329..1330 "\n"
